 -- BLUEGENE - allows for checking nodecard states in the system instead 
    of midplane state so as to not down an entire midplane if you don't 
    have to.
 -- BLUEGENE - fix creation of MESH blocks 
 -- BLUEGENE - on job cancellation we call jm_cancel_job and then wait until
    the system cleans up the job.  Before we would send a SIGKILL right 
    at the beginning. 

* Changes in SLURM 1.3.14
=========================
 -- SECURITY BUG: Fix in sbcast logic that permits users to write files based
    upon supplimental groups of the slurmd daemon. Similar logic for event
    triggers if slurmctld is run as user root (not typical).

* Changes in SLURM 1.3.13
=========================
 -- Added ability for slurmdbd to archive and purge step and/or job records.
 -- Added DefaultQOS as an option to slurmdbd.conf for when clusters are 
    added the default will be set to this if none is given in the sacctmgr line.
 -- Added configure option --enable-sun-const for Sun Constellation system with
    3D torus interconnect. Supports proper smap and sview displays for 3-D
    topology. Node names are automatically put into Hilbert curve order given
    a one-line nodelist definition in slurm.conf (e.g. NodeNames=sun[000x533]). 
 -- Fixed bug in parsing time for sacct and sreport to pick the correct year if
    none is specified.
 -- Provide better scheduling with overlapping partitions (when a job can not
    be scheduled due to insufficient resources, reserve specific the nodes
    associated with that partition rather than blocking all partitions with
    any overlapping nodes).
 -- Correct logic to log in a job's stderr that it was "CANCELLED DUE TO 
    NODE FAILURE" rather than just "CANCELLED".
 -- Fix to crypto/openssl plugin that could result in job launch requests
    being spoofed through the use of an improperly formed credential. This bug 
    could permit a user to launch tasks on compute nodes not allocated for 